--- a/config.yml
+++ b/config.yml
@@ -1,47 +1,54 @@
 app_name: "G14 Control"  # Name of the app, you can customize that as you wish!
 notification_time: 3  # How long notifications will stay on the screen
 check_power_every: 10  # Seconds in between checks to get the battery/ac status
-temp_dir: 'C:\temp'
+temp_dir: 'C:\temp\'
 plans:
   - name: Silent (fanless)
     plan: silent
     cpu_curve: "30c:0%,40c:0%,50c:0%,60c:0%,70c:31%,80c:49%,90c:56%,100c:56%"
     gpu_curve: "30c:0%,40c:0%,50c:0%,60c:0%,70c:34%,80c:51%,90c:61%,100c:61%"
-    cpu_tdp: ""
+    cpu_tdp: null
     boost: false
     dgpu_enabled: false
   - name: Silent (low-speed fan)
     plan: silent
     cpu_curve: "30c:0%,40c:5%,50c:10%,60c:10%,70c:31%,80c:49%,90c:56%,100c:56%"
     gpu_curve: "30c:0%,40c:5%,50c:10%,60c:10%,70c:34%,80c:51%,90c:61%,100c:61%"
-    cpu_tdp: ""
+    cpu_tdp: null
     boost: false
     dgpu_enabled: false
   - name: Silent (default fan speed)
     plan: silent
-    cpu_curve: ""
-    gpu_curve: ""
-    cpu_tdp: ""
+    cpu_curve: null
+    gpu_curve: null
+    cpu_tdp: null
     boost: false
     dgpu_enabled: false
   - name: Windows
     plan: windows
-    cpu_curve: ""
-    gpu_curve: ""
-    cpu_tdp: ""
+    cpu_curve: null
+    gpu_curve: null
+    cpu_tdp: null
     boost: false
     dgpu_enabled: false
   - name: Performance
     plan: performance
-    cpu_curve: ""
-    gpu_curve: ""
-    cpu_tdp: ""
+    cpu_curve: null
+    gpu_curve: null
+    cpu_tdp: null
     boost: false
-    dgpu_enabled: false
+    dgpu_enabled: true
   - name: Turbo
     plan: turbo
-    cpu_curve: ""
-    gpu_curve: ""
-    cpu_tdp: ""
+    cpu_curve: null
+    gpu_curve: null
+    cpu_tdp: null
     boost: false
-    dgpu_enabled: false
+    dgpu_enabled: true
+  - name: Extreme
+    plan: turbo
+    cpu_curve: null
+    gpu_curve: null
+    cpu_tdp: 45000
+    boost: True
+    dgpu_enabled: True
