Added registry entry and check for the program to automatically start on boot, with user option to enable in config.yaml

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,5 @@
 app_name: "G14 Control"  # Name of the app, you can customize that as you wish!
+start_on_boot: false    # Set to True to enable starting on boot which adds a windows registry entry
 notification_time: 3  # How long notifications will stay on the screen
 check_power_every: 10  # Seconds in between checks to get the battery/ac status
 temp_dir: 'C:\temp\' # MUST END with "\"!!
